syntax = "proto3";

option go_package = "./pb";

package pb;

import "userModel.proto";

message GetUserInfoReq {
  int64  id = 1;
}
message GetUserInfoResp {
   int64 id = 1;
   string nickname = 2;
}

message GetUserModelReq{
  int64 id = 1;
}

message GetUserModelResp{
  int64 id = 1;
  string nickname = 2;
  pb.UserModel userModel = 3;
}

//service
service usercenter {
  rpc GetUserInfo(GetUserInfoReq) returns(GetUserInfoResp);
  rpc GetUserModel(GetUserModelReq) returns(GetUserModelResp);
}